TETRAP-3246 - Fixed issue with scrollbar

--- a/tetrapak-customerhub/ui.dev/src/source/templates/components/leftnavigation/_leftNavigation.scss
+++ b/tetrapak-customerhub/ui.dev/src/source/templates/components/leftnavigation/_leftNavigation.scss
@@ -44,6 +44,10 @@
         will-change: transform;
         background-color: $color-congress-blue;
 
+        @media #{$desktop} {
+            background-color: transparent;
+        }
+
         &.translated {
             transform: translateX(0);
         }
@@ -59,6 +63,11 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+
+        @media #{$desktop} {
+            @include max-width(224px);
+            width: auto;
+        }
     }
 
     &__ullist {
